[package]
name = "chrom_mini_graph"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "*"
rand = "0.8.3"
fnv = "*"
fxhash = "*"
debruijn = "*"
disjoint-sets = "*"
smallvec = { version = "*", features = ["union","serde"] }
# block-aligner = { version = "^0.2.0", features = ["simd_avx2"] }
block-aligner = { version = "^0.3.0", features = ["simd_avx2"] }
# libwfa = "*"
serde = "*"
serde_json = "1.0"
clap = "*"
bincode = "*"
rust-htslib = "*"
ndarray = "*"
probability = "*"
rayon = "*"
simple_logger = "*"
log = "*"
radsort = "*"

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 3
debug = true

[profile.bench]
debug = true
